cabal-version:      2.4
name:               todolist
version:            0.1.0.0
synopsis:           A simple task management web app
description:        A web application for managing tasks using Scotty
category:           Web
author:             Pedro Henrique Abreu
maintainer:         pedro@example.com
license:            MIT
build-type:         Simple

executable todolist
  main-is:           Main.hs
  ghc-options:       -Wall
  build-depends:     base >=4.14 && <5
                 , scotty
                 , aeson
                 , bytestring
                 , text
                 , directory
                 , http-types
  default-language:  Haskell2010
